# data-solutions-framework-on-aws

./: .projenrc.ts
examples/datazone-msk-governance/: app.py
examples/datazone-msk-governance/.projen/: tasks.json
examples/datazone-msk-governance/resources/kafka-python/consumer/: consumer_main.py
examples/datazone-msk-governance/resources/kafka-python/producer/: main.py  producer_factory.py
examples/datazone-msk-governance/resources/kafka-python/utils/: common.py  custom_transport.py  schema_registry.py
examples/datazone-msk-governance/resources/lambda/producer/: index.py
examples/datazone-msk-governance/resources/pyspark/: Dockerfile  pyproject.toml
examples/datazone-msk-governance/resources/pyspark/src/: datazone_transport.py  main.py
examples/datazone-msk-governance/stacks/: central_stack.py  consumer_stack.py  cross_account_consumer_stack.py  producer_stack.py  streaming_governance_stack.py
examples/dsf-quickstart/.projen/: deps.json  tasks.json
examples/spark-data-lake/infra/: requirements.txt
examples/spark-data-lake/infra/.projen/: tasks.json
framework/: API.md  package.json
framework/.projen/: deps.json
framework/src/governance/lib/: custom-authorizer-central-helpers.ts  custom-authorizer-environment-helpers.ts  data-catalog-database.ts  data-lake-catalog-props.ts  lake-formation-helpers.ts
framework/src/utils/lib/: dsf-provider.ts  utils.ts
framework/test/e2e/: data-catalog-database.e2e.test.ts  data-lake-catalog.e2e.test.ts
framework/test/unit/consumption/: redshift-data-sharing.test.ts
(+8 files in other folders)
