[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark"
version = "0.0.1"

dependencies = [
  "boto3>=1.34.135",
  "openlineage-python"
]

[project.optional-dependencies]
tests = [
  'pytest==7.3.1',
]

[tool.setuptools.packages]
find = {namespaces = false, exclude=['test']}
